--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ opencv_python>=4.8.1.78
 pandas>=2.1.2
 Pillow>=9.0.1
 presidio_image_redactor==0.0.49
-pydicom>=2.4.3
 pytesseract==0.3.10
 tensorflow>=2.14.0
+pydicom>=2.4.3
+pylibjpeg>=1.4.0
+pylibjpeg-libjpeg>=1.3.4
