--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,138 @@
-keras_ocr==0.9.3
-matplotlib>=3.8.0
-numpy>=1.26.1
-opencv_python>=4.8.1.78
-pandas>=2.1.2
-Pillow>=9.0.1
-presidio_image_redactor==0.0.49
+absl-py==2.0.0
+annotated-types==0.6.0
+anyio==4.2.0
+astunparse==1.6.3
+attrs==23.2.0
+azure-ai-formrecognizer==3.3.2
+azure-ai-ml==1.12.1
+azure-common==1.1.28
+azure-core==1.29.6
+azure-identity==1.15.0
+azure-mgmt-core==1.4.0
+azure-storage-blob==12.19.0
+azure-storage-file-datalake==12.14.0
+azure-storage-file-share==12.15.0
+blis==0.7.11
+cachetools==5.3.2
+catalogue==2.0.10
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
+colorama==0.4.6
+confection==0.1.4
+contourpy==1.2.0
+cryptography==41.0.7
+cycler==0.12.1
+cymem==2.0.8
+editdistance==0.6.2
+efficientnet==1.0.0
+essential-generators==1.0
+exceptiongroup==1.2.0
+filelock==3.13.1
+flatbuffers==23.5.26
+fonttools==4.47.0
+gast==0.5.4
+google-api-core==2.15.0
+google-auth==2.26.1
+google-auth-oauthlib==1.2.0
+google-pasta==0.2.0
+googleapis-common-protos==1.62.0
+grpcio==1.60.0
+h5py==3.10.0
+idna==3.6
+imageio==2.33.1
+imgaug==0.4.0
+isodate==0.6.1
+Jinja2==3.1.2
+jsonschema==4.20.0
+jsonschema-specifications==2023.12.1
+keras==2.15.0
+Keras-Applications==1.0.8
+keras-ocr==0.9.3
+kiwisolver==1.4.5
+langcodes==3.3.0
+lazy_loader==0.3
+libclang==16.0.6
+Markdown==3.5.1
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+matplotlib==3.8.2
+ml-dtypes==0.2.0
+msal==1.26.0
+msal-extensions==1.1.0
+msrest==0.7.1
+murmurhash==1.0.10
+networkx==3.2.1
+numpy==1.26.3
+oauthlib==3.2.2
+opencensus==0.11.4
+opencensus-context==0.1.3
+opencensus-ext-azure==1.1.13
+opencv-python==4.9.0.80
+opt-einsum==3.3.0
+packaging==23.2
+pandas==2.1.4
+phonenumbers==8.13.27
+pillow==10.2.0
+portalocker==2.8.2
+preshed==3.0.9
+presidio-analyzer==2.2.351
+presidio-image-redactor==0.0.49
+protobuf==4.23.4
+psutil==5.9.7
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pyclipper==1.3.0.post5
+pycparser==2.21
+pydantic==2.5.3
+pydantic_core==2.14.6
+pydash==7.0.5
+pydicom==2.4.4
+PyJWT==2.8.0
+pylibjpeg==2.0.0
+pylibjpeg-libjpeg==2.0.0
+pyparsing==3.1.1
+pypng==0.20220715.0
 pytesseract==0.3.10
-tensorflow>=2.14.0
-pydicom>=2.4.3
-pylibjpeg>=1.4.0
-pylibjpeg-libjpeg>=1.3.4
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0.1
+referencing==0.32.1
+regex==2023.12.25
+requests==2.31.0
+requests-file==1.5.1
+requests-oauthlib==1.3.1
+rpds-py==0.16.2
+rsa==4.9
+scikit-image==0.22.0
+scipy==1.11.4
+shapely==2.0.2
+six==1.16.0
+smart-open==6.4.0
+sniffio==1.3.0
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+strictyaml==1.7.3
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0.post1
+tensorflow-estimator==2.15.0
+tensorflow-io-gcs-filesystem==0.35.0
+termcolor==2.4.0
+thinc==8.2.2
+tifffile==2023.12.9
+tldextract==5.1.1
+tqdm==4.66.1
+typer==0.9.0
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.1.0
+validators==0.22.0
+wasabi==1.1.2
+weasel==0.3.4
+Werkzeug==3.0.1
+wrapt==1.14.1
